# Wallpaper-gen

./: .gitignore  CMakeLists.txt  GLWidget.cpp  GLWidget.h  WallPaper.sln  WallPaper.vcxproj  WallPaper.vcxproj.filters  Window.cpp  Window.h  lodepng.cpp  main.cpp
